--- a/projects/form-control-error-detail/package.json
+++ b/projects/form-control-error-detail/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "form-control-error-detail",
+  "name": "@andresandoval/ngx-form-control-error-detail",
   "version": "0.0.1",
-  "description": "Suppor",
+  "description": "Utils/helpers for working with Angular Form controls errors",
   "peerDependencies": {
     "@angular/common": "^18.1.0",
     "@angular/core": "^18.1.0",
