--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "ng test",
     "build:commons": "ng build commons --configuration production",
     "build:form-control-error-detail": "ng build form-control-error-detail --configuration production",
+    "build:material-file-uploader": "ng build material-file-uploader --configuration production",
     "build:overlay-spinner": "ng build overlay-spinner --configuration production",
     "prebuild:overlay-spinner": "rimraf dist/overlay-spinner",
     "postbuild:overlay-spinner": "npm --prefix ./projects/overlay-spinner run build-scss"
@@ -27,7 +28,6 @@
   "dependencies": {
     "@andresandoval/ngx-commons": "file:dist/commons",
     "@angular/animations": "^18.1.0",
-    "@angular/cdk": "^18.1.2",
     "@angular/common": "^18.1.0",
     "@angular/compiler": "^18.1.0",
     "@angular/core": "^18.1.0",
