--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "build:commons": "ng build commons --configuration production",
-    "build:form-control-error-detail": "ng build form-control-error-detail --configuration production",
-    "build:material-file-uploader": "ng build material-file-uploader --configuration production",
-    "build:overlay-spinner": "ng build overlay-spinner --configuration production",
-    "prebuild:overlay-spinner": "rimraf dist/overlay-spinner",
-    "postbuild:overlay-spinner": "npm --prefix ./projects/overlay-spinner run build-scss"
+    "build:commons": "ng build @entropia-io/ngx-commons --configuration production",
+    "build:form-utils": "ng build @entropia-io/ngx-form-utils --configuration production",
+    "build:material-file-uploader": "ng build @entropia-io/ngx-material-file-uploader --configuration production",
+    "build:overlay-spinner": "ng build @entropia-io/ngx-overlay-spinner --configuration production",
+    "prebuild:overlay-spinner": "rimraf dist/entropia-io/ngx-overlay-spinner",
+    "postbuild:overlay-spinner": "npm --prefix ./projects/entropia-io/ngx-overlay-spinner run build-scss",
+    "build:all": "npm run build:commons && npm run build:form-utils && npm run build:material-file-uploader && npm run build:overlay-spinner"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,6 @@
   "homepage": "https://github.com/andresandoval/angular-devkit#readme",
   "private": true,
   "dependencies": {
-    "@andresandoval/ngx-commons": "file:dist/commons",
     "@angular/animations": "^18.1.0",
     "@angular/common": "^18.1.0",
     "@angular/compiler": "^18.1.0",
@@ -36,6 +36,7 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "@entropia-io/commons-js": "^0.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -53,6 +54,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^18.1.0",
     "rimraf": "^6.0.1",
+    "sass": "^1.77.8",
     "typescript": "~5.5.2"
   }
 }
