--- a/projects/entropia-io/ngx-commons/package.json
+++ b/projects/entropia-io/ngx-commons/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@entropia-io/ngx-commons",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Common stuff for Angular projects",
   "peerDependencies": {
     "@angular/common": "^18.1.0",
-    "@angular/core": "^18.1.0"
+    "@angular/core": "^18.1.0",
+    "@entropia-io/commons-js": "^0.0.3"
   },
   "dependencies": {
-    "tslib": "^2.3.0",
-    "@entropia-io/commons-js": "^0.0.1"
+    "tslib": "^2.3.0"
   },
   "sideEffects": false
 }
